Heading alignment is fixed

--- a/src/App.css
+++ b/src/App.css
@@ -8,11 +8,3 @@
   height: 100%;
   background-color: #14172B;
 }
-
-.app__title {
-  gap: 1rem;
-  color: #fff;
-  font-size: 16px;
-  font-weight: 700;
-  margin: 1rem 0;
-}
