--- a/src/Components/Main/Main.css
+++ b/src/Components/Main/Main.css
@@ -1,10 +1,23 @@
 .main {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     gap: 1rem;
     height: 100%;
     background-color: #14172B;
     flex-wrap: wrap;
+}
+
+.main__title {
+    display: flex;
+    gap: 1rem;
+    color: #fff;
+    font-size: 16px;
+    font-weight: 700;
+    margin-top: 2rem;
+}
+
+@media screen and (max-width: 1229px) {
+    .main__title {
+        align-items: center;
+        justify-content: center;
+        margin-top: 1rem;
+    }
 }
